[package]
name = "comments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
axum = { version = "0.5", features = ["headers"] }
axum-macros = "0.2"
axum-server = { version = "0.4", features = ["tls-rustls"] }
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
serde = { version = "1", features = ["derive"] }

[dependencies.sqlx]
version = "0.5"
features = ["sqlite", "runtime-tokio-rustls"]
default-features = false
